Project

General

Profile

Actions

Bug #37547

closed

client: fix failure in quota size limitation when using samba

Added by tang junhui over 5 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
Correctness/Safety
Target version:
% Done:

0%

Source:
Community (dev)
Tags:
Backport:
mimic,luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Client
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

In samba, Client::_write may be called with the offset a
negative number, and use the f->pos as the real write offset,
in such condition, quota size can not limite the writes
enven it exceeds the size limitation.


Related issues 2 (0 open2 closed)

Copied to CephFS - Backport #37695: mimic: client: fix failure in quota size limitation when using sambaResolvedJos CollinActions
Copied to CephFS - Backport #37696: luminous: client: fix failure in quota size limitation when using sambaRejectedJos CollinActions
Actions #1

Updated by Greg Farnum over 5 years ago

  • Project changed from Ceph to CephFS
  • Component(FS) Samba VFS added
Actions #2

Updated by Patrick Donnelly over 5 years ago

  • Category set to Correctness/Safety
  • Assignee set to tang junhui
  • Target version set to v14.0.0
  • Source set to Community (dev)
  • Backport set to mimic,luminous
  • Pull request ID set to 25110
  • Component(FS) Client added
  • Component(FS) deleted (Samba VFS)
Actions #3

Updated by Patrick Donnelly over 5 years ago

  • Status changed from New to Fix Under Review
Actions #4

Updated by Patrick Donnelly over 5 years ago

  • Description updated (diff)
Actions #5

Updated by Patrick Donnelly over 5 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #6

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #37695: mimic: client: fix failure in quota size limitation when using samba added
Actions #7

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #37696: luminous: client: fix failure in quota size limitation when using samba added
Actions #8

Updated by Nathan Cutler about 5 years ago

@Patrick - Jos reports the luminous backport is non-trivial. Do we really need it?

Actions #9

Updated by Patrick Donnelly about 5 years ago

  • Status changed from Pending Backport to Resolved

Nathan Cutler wrote:

@Patrick - Jos reports the luminous backport is non-trivial. Do we really need it?

No we don't. Marking this resolved.

Actions

Also available in: Atom PDF