client: fix failure in quota size limitation when using samba

In samba, Client::_write may be called with the offset a
negative number, and use the f->pos as the real write offset,
in such condition, quota size can not limite the writes
enven it exceeds the size limitation.

Signed-off-by: Junhui Tang <tangjunhui@sangfor.com.cn>
Fixes: http://tracker.ceph.com/issues/37547
(cherry picked from commit c14ca19ed42cde552ec8d1f933aa209e891040e8)